# ChangeLog for net-dialup/pptpd
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-dialup/pptpd/ChangeLog,v 1.10 2004/08/25 02:48:52 swegener Exp $

  25 Aug 2004; Sven Wegener <swegener@gentoo.org> pptpd-1.1.3.ebuild:
  Changed SRC_URI to use mirror:// syntax.

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> pptpd-1.1.2.ebuild,
  pptpd-1.1.3.20030409.ebuild, pptpd-1.1.3.ebuild, pptpd-1.1.4_beta3.ebuild,
  pptpd-1.1.4_beta4.ebuild:
  virtual/glibc -> virtual/libc

*pptpd-1.1.4_beta4 (10 Aug 2003)

  10 Aug 2003; Jared Hudson <jhhudso@gentoo.org> : Version bump and bug fix.
  Fixed bug in /etc/init.d/pptpd. Ebuild and bugfix credit goes to
  Ross Dougherty <theklone@optusnet.com.au> Bug id #23961 and #20041.
	
*pptpd-1.1.4_beta3 (28 Jun 2003)

  28 Jun 2003; Jared Hudson <jhhudso@gentoo.org> : Version bump.
	
*pptpd-1.1.3.20030409 (28 Apr 2003)

  23 May 2003; Chuck Brewer <killian@gentoo.org>:
  Added manifest.

*pptpd-1.1.3.20030409 (28 Apr 2003)

  28 Apr 2003; Daniel Ahlberg <aliz@gentoo.org> pptpd-1.1.3.20030409.ebuild :
  Security update.

*pptpd-1.1.3 (6 Nov 2002)

   6 Nov 2002; Jared Hudson <jhhudso@gentoo.org> : Revision bump in regard to
   bug #5154. Credit goes to: Frederic Mangeant <frederic.mangeant@free.fr>
	
*pptpd-1.1.2 (22 May 2002)

   5 May 2002; Mike Jones <ashmodai@gentoo.org> ChangeLog, pptpd-1.1.2.ebuild: