@@ -1,6 +1,9 @@
 # ChangeLog for net-dialup/pptpd
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dialup/pptpd/ChangeLog,v 1.10 2004/08/25 02:48:52 swegener Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dialup/pptpd/ChangeLog,v 1.11 2004/12/19 09:28:53 mrness Exp $
+
+  19 Dec 2004; Alin Nastac <mrness@gentoo.org> pptpd-1.1.4_beta4.ebuild:
+  Fix autotools generated files (#72744) and mark it stable on x86.
 
   25 Aug 2004; Sven Wegener <swegener@gentoo.org> pptpd-1.1.3.ebuild:
   Changed SRC_URI to use mirror:// syntax.
